Add Jobs UI and Run now API on port 8098

--- a/rclone_backup/config.yaml
+++ b/rclone_backup/config.yaml
@@ -70,6 +70,8 @@ schema:
   no_slugify: bool?
   log_level: list(debug|info|warning|error|fatal)?
 image: ghcr.io/dig12345/hassio-rclone-scripts/{arch}
+ports:
+  8098/tcp: 8098
 devices:
   - /dev/fuse
 privileged:
